--- a/public/about.html
+++ b/public/about.html
@@ -9,14 +9,14 @@
 <body>
   <header>
     <img src="logo/logo.webp">
-    <a href="golovna.htm"><h1>Найвідоміші музеї Полтавщини</h1></a>
+    <a href="index.html"><h1>Найвідоміші музеї Полтавщини</h1></a>
   </header>
   <nav>
     <ul>
-      <li><a href="about.htm">Про сайт</a></li>
-      <li><a href="gallery.htm">Галерея картинок</a></li>
-      <li><a href="news.htm">Новини</a></li>
-      <li><a href="contacts.htm">Контакти</a></li>
+      <li><a href="about.html">Про сайт</a></li>
+      <li><a href="gallery.html">Галерея картинок</a></li>
+      <li><a href="news.html">Новини</a></li>
+      <li><a href="contacts.html">Контакти</a></li>
     </ul>
   </nav>
   <main>
